<resources>
    <string name="app_name">微呼百应</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_button_content_description">Change state of section</string>
    <string name="scale_up_show_behavior">com.nanchen.aiyagirl.widget.behavior.ScaleUpShowBehavior</string>
    <string name="username_hint">请输入用户名</string>
    <string name="passwd_hint">Input password</string>
    <string name="login_btn_txt">Login</string>
    <string name="auto_login_chk_txt">Auto Login</string>
    <string name="fetch_linelist_failed">Fetching line list failed.</string>
    <string name="login_failed">登录失败,%s</string>
    <string name="fetch_reslist_failed">Fetching resource list failed,%s</string>
    <string name="server_setting">Server Setting</string>
    <string name="server_setting_hint">Input a server address</string>
    <string name="save">Save</string>
    <string name="serveraddr_empty_tip">Server is empty !</string>
    <string name="line_unavailable">No available line,please click button to fetch line list!</string>
    <string name="getline_suc_tip">Getting line success!</string>
    <string name="getline_fail_tip">Getting line failed,%s</string>
    <string name="login_suc_tip">登录成功!</string>
    <string name="fetchline_process_tip">Fetching line list...</string>
    <string name="login_process_tip">正在登录...</string>
    <string name="no_data_tip">No data.</string>
    <string name="fetch_resource_suc">Fetching resource success!</string>
    <string name="cloud_ctrl">Cloud Platform Control </string>
    <string name="start_ctrl">Start 云台control </string>
    <string name="stop_ctrl">Stop 云台control </string>
    <string name="stream_choose">Choose a stream</string>
    <string name="fetch_line">Fetch line</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="press_again_to_exit">再按一次退出程序</string>
    <string name="page_load_failed">加载失败…</string>
    <string name="network_unavailable">网络状态不佳</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="ControlSucceed">控制成功</string>
    <string name="normal">电子地图</string>
    <string name="satellite">卫星地图</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
    </string-array>
    <string-array name="cityList">
        <item>北京</item>
        <item>长沙</item>
        <item>上海</item>
    </string-array>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_my_data_list">MyDataList</string>
    <string name="title_activity_draw_my_line_map">DrawMyLineMapActivity</string>
    <string name="title_activity_show_my_line">ShowMyLine</string>
    <string name="tab_main">主页</string>
    <string name="tab_check">考勤查询</string>
    <string name="tab_quest">问卷查询</string>
    <string name="tab_item_quest">教师满意度调查表</string>
    <string name="tab_course">课程表</string>
    <string name="tab_achievement">作业成绩</string>
    <string name="tab_attendance">出勤成绩</string>
    <string name="tab_classroom">课堂表现</string>
    <string name="tab_exam">考试成绩</string>
    <string name="tab_score">成绩查询</string>
    <string name="tab_myinfo">个人信息</string>
    <string name="tab_myarchives">我的档案</string>
    <string name="tab_email">修改邮箱</string>
    <string name="tab_phone">修改手机</string>
    <string name="tab_pass">修改密码</string>
    <string name="tab_more">更多</string>
    <string name="tab_map">地图</string>
    <string name="tab_car">车辆</string>
    <string name="tab_history">历史</string>
    <string name="tab_task">教务</string>
    <string name="tab_my">我</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="setting_title">请设置服务器IP:</string>
    <string name="setting_sure">确定</string>
    <string name="setting_cancle">取消</string>
    <string name="unit_name">单位信息</string>
    <string name="jcd_name">监测点信息</string>
    <string name="car_search_tip">从列表中选择</string>
    <string name="car_search_hint">请输入要查询车辆的车号</string>
    <string name="dialog_loading">加载中...</string>
    <string name="yjfk">亲爱的用户，您好。欢迎来到意见反馈中心。\n请问以下问题是您关系的问题吗：\n1，监控视频播放失败。\n2，加载数据不完整。\n3，偶尔有闪退。\n
        如果以上问题没有帮助到您，或者对我们的客户端有任何优化建议，请在下方留言。
        </string>
    <string name="hint_fkyj">请输反馈意见</string>
    <string name="text">text</string>
    <string name="welcome_tips">做年轻人爱看的直播</string>
    <string name="tab_home">首页</string>
    <string name="tab_live">直播</string>
    <string name="tab_follw">关注</string>
    <string name="tab_me">我的</string>
    <string name="tab_all">全部</string>
    <string name="search">搜索</string>
    <string name="scoll_aware_fab_behavior">.view.ScollAwareFABBehavior</string>
    <string name="room_chat">聊天</string>
    <string name="room_ranking">排行</string>
    <string name="room_anchor">主播</string>
    <string name="room_follow">关注</string>
    <string name="hint_room_chat">和主播说点什么…</string>
    <string name="tips_notice_desc">&#160;全民直播提倡绿色直播。封页和直播内容含吸烟，低俗，引诱，暴露等都将被封停账号。网警在线24小时巡查哦。</string>
    <string name="account_">全民号：</string>
    <string name="fans_">粉丝：</string>
    <string name="zhandouli_">战斗力：</string>
    <string name="l">|</string>
    <string name="live_notice">直播公告</string>
    <string name="start_live_time">开播时间</string>
    <string name="personal_information">个人资料</string>
    <string name="age">年龄</string>
    <string name="emotional_state">情感状态</string>
    <string name="location">所在地</string>
    <string name="occupation">职业</string>
    <string name="secrecy">保密</string>
    <string name="outer_space">外太空</string>
    <string name="qm_account">全民号 %1$s</string>
    <string name="fans_num">粉丝 %1$d</string>
    <string name="tips_current_not_login">当前未登录</string>
    <string name="btn_follow_click_login">点击登录，精彩不再错过</string>
    <string name="btn_click_login">点击登录</string>
    <string name="mine_follow">关注</string>
    <string name="mine_fans">粉丝</string>
    <string name="mine_recharge">充值</string>
    <string name="mine_starlight">我的星光</string>
    <string name="mine_contribution">星光贡献榜</string>
    <string name="mine_watch">观看历史</string>
    <string name="mine_level">我的等级</string>
    <string name="mine_task">任务中心</string>
    <string name="mine_game">游戏中心</string>
    <string name="mine_setting">设置</string>
    <string name="isFirstIn">isFirstIn</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="lable_username_number">用户名/手机号</string>
    <string name="lable_password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="third_party_login">第三方登录</string>
    <string name="recommend">推荐</string>
    <string name="recommend_more">更多</string>
    <string name="hint_search">请输入主播昵称或全民号</string>
    <string name="tips_search_keywords_cannot_be_empty">搜索关键字不能为空</string>
    <string name="islive">正在直播</string>
    <string name="can_not_find_relevant_content">没有更多数据啦！</string>
    <string name="no_more">没有更多了</string>
    <string name="swipe_down_to_refresh">下拉刷新数据</string>
    <string name="about">关于</string>
    <string name="author_">Author:</string>
    <string name="email_">Email:</string>
    <string name="csdn_">CSDN:</string>
    <string name="github_">Github:</string>
    <string name="today">今天</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="author_jenly">Jenly</string>
    <string name="email_jenly"><u>jenly1314@gmail.com</u></string>
    <string name="csdn_jenly"><u>http://blog.csdn.net/jenly121</u></string>
    <string name="github_jenly"><u>https://github.com/jenly1314</u></string>
    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>
    <string name="skip">跳过(%1$ds)</string>
    <string name="register_tv_license"><u>微呼百应用户注册协议</u></string>
    <string name="filter_reset">重置</string>
    <string name="net_error_msg">网络不给力</string>
    <string name="no_comment">暂无评论，点击抢沙发</string>
    <string name="tips_not_wifi">You are currently using the mobile network, the player will continue to consume traffic</string>
    <string name="tips_not_wifi_confirm">Resume</string>
    <string name="tips_not_wifi_cancel">Stop play</string>
    <string name="no_url">No url</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="opening_wechat">正在打开微信，请稍后...</string>
    <string name="opening_qq">正在打开QQ，请稍后...</string>
    <string name="opening_blog">正在打开微博，请稍后...</string>
    <string name="ip_all_images">所有图片</string>
    <string name="ip_folder_image_count">共%1$d张</string>
    <string name="ip_preview_image_count">%1$d/%2$d</string>
    <string name="ip_select_limit">最多选择%1$d张图片</string>
    <string name="ip_complete">完成</string>
    <string name="ip_select_complete">完成(%1$d/%2$d)</string>
    <string name="ip_preview">预览</string>
    <string name="ip_preview_count">预览(%1$d)</string>
    <string name="ip_photo_crop">图片裁剪</string>
    <string name="ip_origin">原图</string>
    <string name="ip_origin_size">原图(%1$s)</string>
    <string name="empty_directory">空目录</string>
    <string name="storage_removed">设备被移除或未挂载</string>
    <string name="choose_file">选择文件</string>
    <string name="error_selecting_file">选择文件出错</string>
    <string name="internal_storage">内部存储</string>
    <string name="picture_camera_roll">相机胶卷</string>
    <string name="picture_cancel">取消</string>
    <string name="picture_take_picture">拍摄</string>
    <string name="hair_circle_of_douyinoriginal">递名片</string>
    <string name="contact_cooperation">联系合作</string>
    <string name="cooperated">合作完成</string>
    <string name="submit">提交申请</string>
    <string name="task_time">活动起止时间</string>
    <string name="friend_release_diaog_content1">以后既可以提交审核材料了</string>
    <string name="friend_release_diaog_content2">呼呼在这里等你</string>
    <string name="try_again_later">稍后再来</string>
    <string name="input_name">输入姓名</string>
    <string name="input_card_number">输入身份证号</string>
</resources>