<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:weightSum="5">

        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icon_back_white"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="实名认证"
            android:textColor="@color/white"
            android:textSize="17sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center|top"
        android:paddingTop="12dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_name"
            android:background="@drawable/search_toobar4"
            android:layout_margin="16dp" />

        <EditText
            android:id="@+id/numberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/input_card_number"
            android:background="@drawable/search_toobar4"
            android:layout_margin="16dp" />
        <Button
            android:id="@+id/submit_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="onClick"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_login"
            />

    </LinearLayout>


</LinearLayout>